src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Reason_for_Contact_new__c</fullName>
        <label>CC Reason for Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add/Purchase</fullName>
                    <color>#CC0000</color>
                    <label>Add/Purchase</label>
                </value>
                <value>
                    <fullName>Cancel/Remove</fullName>
                    <color>#FF6600</color>
                    <label>Cancel/Remove</label>
                </value>
                <value>
                    <fullName>Error/Problem</fullName>
                    <color>#FFCC33</color>
                    <label>Error/Problem</label>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                    <color>#33CC00</color>
                    <label>Information Request</label>
                </value>
                <value>
                    <fullName>Product Question</fullName>
                    <color>#00CCCC</color>
                    <label>Product Question</label>
                </value>
                <value>
                    <fullName>Request Action</fullName>
                    <color>#6600CC</color>
                    <label>Request Action</label>
                </value>
                <value>
                    <fullName>Update Order</fullName>
                    <color>#CC33CC</color>
                    <label>Update Order</label>
                </value>
                <value>
                    <fullName>Technical Issues</fullName>
                    <color>#F96FB7</color>
                    <label>Technical Issues</label>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                    <color>#666666</color>
                    <label>Other Reason</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Escalation__c</fullName>
        <label>Reason for Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Turnaround time issue</fullName>
                </value>
                <value>
                    <fullName>LZ mistake (LZM)</fullName>
                </value>
                <value>
                    <fullName>Customer called in but couldn’t be verified</fullName>
                </value>
                <value>
                    <fullName>Extreme revision</fullName>
                </value>
                <value>
                    <fullName>Problem may impact deed (Living Trust only, but could add now)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution1_Sub__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolution1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AS Subscription</fullName>
                </value>
                <value>
                    <fullName>Order not started</fullName>
                </value>
                <value>
                    <fullName>RA Subscription</fullName>
                </value>
                <value>
                    <fullName>Demonstrated how to use</fullName>
                </value>
                <value>
                    <fullName>Explained benefits of AS subscription</fullName>
                </value>
                <value>
                    <fullName>Explained benefits of product</fullName>
                </value>
                <value>
                    <fullName>Explained benefits of RA subscription</fullName>
                </value>
                <value>
                    <fullName>Disconnected / bad number</fullName>
                </value>
                <value>
                    <fullName>DO NOT CALL customer</fullName>
                </value>
                <value>
                    <fullName>left message with another person (not VM)</fullName>
                </value>
                <value>
                    <fullName>left voice mail</fullName>
                </value>
                <value>
                    <fullName>Reassigned, customer wasnot called</fullName>
                </value>
                <value>
                    <fullName>Sent email</fullName>
                </value>
                <value>
                    <fullName>Unable to leave message</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Adult guardianship</fullName>
                </value>
                <value>
                    <fullName>Annulments</fullName>
                </value>
                <value>
                    <fullName>Asset Protection Trust</fullName>
                </value>
                <value>
                    <fullName>Commercial Lease</fullName>
                </value>
                <value>
                    <fullName>Contested Divorce</fullName>
                </value>
                <value>
                    <fullName>Divorce -State not offered</fullName>
                </value>
                <value>
                    <fullName>Guardianship Docs</fullName>
                </value>
                <value>
                    <fullName>Irrevocable Trust</fullName>
                </value>
                <value>
                    <fullName>Joint Will</fullName>
                </value>
                <value>
                    <fullName>Legal Separation Docs</fullName>
                </value>
                <value>
                    <fullName>Name Change - State not offered</fullName>
                </value>
                <value>
                    <fullName>One Spouse (default) Divorce</fullName>
                </value>
                <value>
                    <fullName>Rent/Lease to Own</fullName>
                </value>
                <value>
                    <fullName>Revising non LZ Documents</fullName>
                </value>
                <value>
                    <fullName>Special Needs Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution1__c</fullName>
        <label>Resolution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled (no refund due)</fullName>
                </value>
                <value>
                    <fullName>Order Saved</fullName>
                </value>
                <value>
                    <fullName>Outbound Result</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Product not offered</fullName>
                </value>
                <value>
                    <fullName>Refund Requested</fullName>
                </value>
                <value>
                    <fullName>Requires Transfer</fullName>
                </value>
                <value>
                    <fullName>Resolved Issue</fullName>
                </value>
                <value>
                    <fullName>Other (describe in case comments)</fullName>
                </value>
                <value>
                    <fullName>Customer already contacted</fullName>
                </value>
                <value>
                    <fullName>Action Requested- RL</fullName>
                </value>
                <value>
                    <fullName>Customer Negative- RL</fullName>
                </value>
                <value>
                    <fullName>Customer Positive- RL</fullName>
                </value>
                <value>
                    <fullName>Customer Comment - RL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary contact on case.  Mapped from cc fields on RightNow incidents.</description>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases as Secondary Contaact</relationshipLabel>
        <relationshipName>Secondary_Contact_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Media_Origin__c</fullName>
        <label>Social Media Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ask.com</fullName>
                </value>
                <value>
                    <fullName>Attorney General Complaint</fullName>
                </value>
                <value>
                    <fullName>Bazaarvoice</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>BCA</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Complaints Board</fullName>
                </value>
                <value>
                    <fullName>Consumer Reports</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Law Pivot</fullName>
                </value>
                <value>
                    <fullName>LegalSpring</fullName>
                </value>
                <value>
                    <fullName>LinkedIN</fullName>
                </value>
                <value>
                    <fullName>Lzserve Email</fullName>
                </value>
                <value>
                    <fullName>MeasuredUp</fullName>
                </value>
                <value>
                    <fullName>Pissed Consumer</fullName>
                </value>
                <value>
                    <fullName>PublishThis</fullName>
                </value>
                <value>
                    <fullName>Ripoff Report</fullName>
                </value>
                <value>
                    <fullName>Scambook</fullName>
                </value>
                <value>
                    <fullName>Trustlink</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>WebEngage Feedback</fullName>
                </value>
                <value>
                    <fullName>Yahoo Answers</fullName>
                </value>
                <value>
                    <fullName>Youtube</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reasons__c</fullName>
        <label>Status Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned for Customer Outreach</fullName>
                </value>
                <value>
                    <fullName>LZ Research Required</fullName>
                </value>
                <value>
                    <fullName>Assigned for Resolution</fullName>
                </value>
                <value>
                    <fullName>Updated by Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Submitting Revision</fullName>
                </value>
                <value>
                    <fullName>Customer Submitting Materials</fullName>
                </value>
                <value>
                    <fullName>Customer didn&apos;t have needed info</fullName>
                </value>
                <value>
                    <fullName>Call attempted - Customer not reached (VM/disconnect)</fullName>
                </value>
                <value>
                    <fullName>Email Sent, Pending Response</fullName>
                </value>
                <value>
                    <fullName>LZM</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Escalated Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Issue Resolved (non Proofer resolution)</fullName>
                </value>
                <value>
                    <fullName>Revision Placed for Customer</fullName>
                </value>
                <value>
                    <fullName>Proofer Updated</fullName>
                </value>
                <value>
                    <fullName>Customer Proceeding As Is/No Update Required</fullName>
                </value>
                <value>
                    <fullName>Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Customer-Requested Item Complete</fullName>
                </value>
                <value>
                    <fullName>No Order Problem (Case Created in Error)</fullName>
                </value>
                <value>
                    <fullName>Auto Closed (Timeout) - Unresolved</fullName>
                </value>
                <value>
                    <fullName>Revision placed on LZ.com</fullName>
                </value>
                <value>
                    <fullName>Revision placed on LZ.com (after 7 day closure)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent_on_Revision__c</fullName>
        <formula>(Date_Time_Revision_Complete__c - Date_Time_Sent_for_Revision__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent on Revision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <inlineHelpText>This is the &quot;Topic&quot; the customer selected in the web to case form. this should be the product the customer has questions about.</inlineHelpText>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Advantage Pro Plan</fullName>
                </value>
                <value>
                    <fullName>Bylaws &amp; Resolutions</fullName>
                </value>
                <value>
                    <fullName>Company Conversion</fullName>
                </value>
                <value>
                    <fullName>Company Dissolution</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Patent Search</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Corporate Minutes</fullName>
                </value>
                <value>
                    <fullName>DBA (Doing Business As)</fullName>
                </value>
                <value>
                    <fullName>Design Patent</fullName>
                </value>
                <value>
                    <fullName>Divorce</fullName>
                </value>
                <value>
                    <fullName>Federal Tax ID / EIN</fullName>
                </value>
                <value>
                    <fullName>Foreign Qualification</fullName>
                </value>
                <value>
                    <fullName>Immigration - Citizenship</fullName>
                </value>
                <value>
                    <fullName>Immigration - Greencards</fullName>
                </value>
                <value>
                    <fullName>Incorporation</fullName>
                </value>
                <value>
                    <fullName>Last Will and Testament</fullName>
                </value>
                <value>
                    <fullName>Legal Advantage Plus Plan</fullName>
                </value>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Living Will / Healthcare POA</fullName>
                </value>
                <value>
                    <fullName>LLC (Limited Liability Company)</fullName>
                </value>
                <value>
                    <fullName>LLP (Limited Liability Partnership)</fullName>
                </value>
                <value>
                    <fullName>LP (Limited Partnership)</fullName>
                </value>
                <value>
                    <fullName>Name Change</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Corporation</fullName>
                </value>
                <value>
                    <fullName>Pet Protection Agreement</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <formula>Total_Phone_Contacts__c +  Total_outbound_emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Automatic_Outbound_Emails__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Automatic Outbound Emails</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Manual_Outbound_Emails__c</fullName>
        <description>Calculates the number of manual emails by subtracting the automatic outbound emails from the total outbound emails.</description>
        <formula>IF((Total_outbound_emails__c  -  Total_Automatic_Outbound_Emails__c) &lt; 0, null, (Total_outbound_emails__c  -  Total_Automatic_Outbound_Emails__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Manual Outbound Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Phone_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Phone Contacts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_outbound_emails__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Outbound Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trademark_Name__c</fullName>
        <label>Trademark Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPTO_Id__c</fullName>
        <label>USPTO Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPTO_Serial_Number__c</fullName>
        <label>USPTO Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unassigned_Case__c</fullName>
        <formula>IF(Assigned_User__c &lt;&gt; &quot;&quot;, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unassigned Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Was_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Escalated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>created_date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>created date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>ALTM</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed – First Response,Closed</value>
        </filters>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>ALTM</value>
        </filters>
        <label>ALTM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASD_Copyright_Correction_Letter</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Assigned_User__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Queue__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>ASD-Copyright Correction Letter</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>ASD-Copyright Correction Letter</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASD_LegalPlan_Retention</fullName>
        <booleanFilter>(1 or 3) and 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Order_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>ASD-LegalPlan_Retention</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>ASD-LegalPlan_Retention</value>
        </filters>
        <label>ASD-LegalPlan_Retention</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AZ_RA_Change</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>AZ RA Change</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>AZ RA Change</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AZ_RA_Change_Non_Ds</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Queue__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.EMAIL</field>
            <operation>notEqual</operation>
            <value>dse@docusign.net</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>dse@docusign.net</value>
        </filters>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>AZ RA Change</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>AZ RA Change Non-DS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_Manager</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Call_Status__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Account Manager</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AM_Call_Log__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Account Manager</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_Manager_EP_Starter</fullName>
        <columns>Assigned_User__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Account Manager EP Starter</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AM_Call_Log__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Account Manager EP Starter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_Manager_Manager_Call_Back</fullName>
        <columns>Date_Time_Call_Back_Target__c</columns>
        <columns>Overdue_Call_Back__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Order__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Account Mgmt Manager Call-Back</value>
        </filters>
        <label>Account Mgmt Manager Call-Back</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_Manager_TM</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Account Manager TM</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AM_Call_Log__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Account Manager TM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenCustomerCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Order_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Passes__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Standard_Case</value>
        </filters>
        <label>All Open Customer Facing Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenInternalCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Order_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Case_Passes__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Internal_Case</value>
        </filters>
        <label>All Open Internal Action Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Queue__c</columns>
        <columns>Assigned_User__c</columns>
        <columns>Legacy_Reference_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Order_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Passes__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
</CustomObject>